Added search feature

--- a/Lab_23/Lab_23.csproj
+++ b/Lab_23/Lab_23.csproj
@@ -242,6 +242,8 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\NewItem.cshtml" />
+    <Content Include="Views\Home\ItemDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
